<?xml version="1.0" encoding="utf-8"?>
<GridView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/master_list_fragment_grid_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:numColumns="1"
    android:gravity="center"
    android:stretchMode="columnWidth"
    android:verticalSpacing="8dp"
    />

