<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

<GridView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_steps_list_grid_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:numColumns="1"
    android:stretchMode="columnWidth"
    android:verticalSpacing="8dp"
    android:textAlignment="viewEnd"
    android:gravity="end" />

<TextView
android:layout_width="match_parent"
android:layout_height="match_parent"
android:textSize="32sp"
android:textAlignment="center"
android:textColor="#ffffff"
android:text="@string/recipe_placeholder"
android:id="@+id/recipe_steps_text_view"
    android:visibility="gone"
    />
</FrameLayout>
